--- a/app/src/main/res/layout/item_workspace.xml
+++ b/app/src/main/res/layout/item_workspace.xml
@@ -12,19 +12,41 @@
         android:padding="8dp"
         app:cardCornerRadius="8dp"
         app:cardElevation="4dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="match_parent">
 
             <!-- Workspace Icon -->
+
+            <TextView
+                android:id="@+id/viewWorkspaceButton"
+                android:layout_width="wrap_content"
+                android:layout_height="35dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="18dp"
+                android:layout_marginBottom="8dp"
+                android:background="@drawable/button_design"
+                android:padding="8dp"
+                android:text=" View WorkSpace"
+                android:textAlignment="center"
+                android:textColor="@color/white"
+                android:textSize="12sp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/leaderName" />
+
             <ImageView
                 android:id="@+id/workspaceIcon"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
+                android:padding="4dp"
+                android:scaleType="centerInside"
                 android:src="@drawable/workspace"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -38,62 +60,126 @@
                 android:text="Workspace Name"
                 android:textSize="18sp"
                 android:textStyle="bold"
-                app:layout_constraintEnd_toStartOf="@id/actionButton"
                 app:layout_constraintStart_toEndOf="@id/workspaceIcon"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <!-- Workspace Description -->
+
+            <!-- Number of Members -->
             <TextView
                 android:id="@+id/workspaceDescription"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_width="338dp"
+                android:layout_height="48dp"
+                android:layout_marginTop="2dp"
+                android:layout_marginEnd="2dp"
+                android:inputType="textMultiLine"
                 android:padding="8dp"
                 android:text="Workspace Description"
                 android:textColor="@android:color/darker_gray"
                 android:textSize="14sp"
-                app:layout_constraintEnd_toStartOf="@id/actionButton"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="@id/workspaceName"
                 app:layout_constraintTop_toBottomOf="@id/workspaceName" />
-
-            <!-- Number of Members -->
-            <TextView
-                android:id="@+id/workspaceMembers"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:padding="8dp"
-                android:text="Members: 0"
-                android:textSize="12sp"
-                app:layout_constraintStart_toStartOf="@id/workspaceName"
-                app:layout_constraintTop_toBottomOf="@id/workspaceDescription" />
 
             <!-- Number of Tasks -->
 
             <!-- Action Button (e.g., View or Edit) -->
-            <TextView
-                android:id="@+id/workspaceTasks"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:padding="8dp"
-                android:text="Tasks: 0"
-                android:textSize="12sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.586"
-                app:layout_constraintStart_toEndOf="@+id/workspaceMembers"
-                app:layout_constraintTop_toBottomOf="@id/workspaceDescription" />
 
-            <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/actionButton"
-                android:layout_width="90dp"
-                android:layout_height="48dp"
-                android:background="@drawable/button_design"
+            <TextView
+                android:id="@+id/workspaceMembers"
+                android:layout_width="wrap_content"
+                android:layout_height="30dp"
+                android:layout_marginTop="4dp"
+                android:gravity="center"
+                android:text="Members: "
+                android:textAlignment="center"
+                android:textSize="14sp"
+                app:layout_constraintStart_toStartOf="@+id/workspaceDescription"
+                app:layout_constraintTop_toBottomOf="@+id/workspaceDescription" />
+
+            <TextView
+                android:id="@+id/deadline"
+                android:layout_width="wrap_content"
+                android:layout_height="40dp"
+                android:layout_marginTop="2dp"
+                android:layout_marginEnd="2dp"
+                android:layout_marginBottom="2dp"
+                android:gravity="center"
                 android:padding="8dp"
-                android:text="View"
-                android:textColor="@color/white"
-                android:textSize="13sp"
-                app:layout_constraintBottom_toBottomOf="parent"
+                android:text="12 October 2024"
+                android:textAlignment="center"
+                android:textSize="14sp"
+                app:layout_constraintBottom_toTopOf="@+id/workspaceDescription"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                tools:ignore="TouchTargetSize" />
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/leaderName"
+                android:layout_width="wrap_content"
+                android:layout_height="30dp"
+                android:layout_marginTop="4dp"
+                android:layout_marginEnd="18dp"
+                android:gravity="center"
+                android:text="Ahmad Ali"
+                android:textAlignment="center"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/workspaceDescription" />
+
+            <TextView
+                android:id="@+id/workSpaceLeader"
+                android:layout_width="wrap_content"
+                android:layout_height="30dp"
+                android:layout_marginTop="4dp"
+                android:layout_marginEnd="2dp"
+                android:gravity="center"
+                android:text="Team Leader: "
+                android:textAlignment="center"
+                app:layout_constraintEnd_toStartOf="@+id/leaderName"
+                app:layout_constraintTop_toBottomOf="@+id/workspaceDescription" />
+
+            <TextView
+                android:id="@+id/totalMembers"
+                android:layout_width="wrap_content"
+                android:layout_height="30dp"
+                android:layout_marginStart="2dp"
+                android:layout_marginTop="4dp"
+                android:gravity="center"
+                android:text="15"
+                android:textAlignment="center"
+                app:layout_constraintStart_toEndOf="@+id/workspaceMembers"
+                app:layout_constraintTop_toBottomOf="@+id/workspaceDescription" />
+
+            <TextView
+                android:id="@+id/showMembersButton"
+                android:layout_width="wrap_content"
+                android:layout_height="35dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="8dp"
+                android:background="@drawable/button_design"
+                android:padding="10dp"
+                android:text="Show Members"
+                android:textColor="@color/white"
+                android:textSize="12sp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="@+id/workspaceMembers"
+                app:layout_constraintTop_toBottomOf="@+id/workspaceMembers" />
+
+            <TextView
+                android:id="@+id/workspaceDeadline"
+                android:layout_width="wrap_content"
+                android:layout_height="40dp"
+                android:layout_marginTop="2dp"
+                android:layout_marginEnd="2dp"
+                android:layout_marginBottom="2dp"
+                android:gravity="center"
+                android:text="Deadline: "
+                android:textAlignment="center"
+                android:textSize="14sp"
+                app:layout_constraintBottom_toTopOf="@+id/workspaceDescription"
+                app:layout_constraintEnd_toStartOf="@+id/deadline"
+                app:layout_constraintTop_toTopOf="parent" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
