--- a/app/src/main/res/layout/activity_add_work_space.xml
+++ b/app/src/main/res/layout/activity_add_work_space.xml
@@ -28,7 +28,7 @@
         android:layout_marginTop="10dp"
         android:layout_marginEnd="10dp"
         android:background="@drawable/searchview_shape"
-        android:hint="Workspace Name"
+        android:hint="Enter Workspace Name"
         android:inputType="text"
         android:minHeight="48dp"
         android:padding="8dp"
@@ -45,7 +45,7 @@
         android:layout_marginTop="10dp"
         android:layout_marginEnd="10dp"
         android:background="@drawable/searchview_shape"
-        android:hint="Workspace Description"
+        android:hint="Write Workspace Description"
         android:inputType="textMultiLine"
         android:minHeight="48dp"
         android:padding="8dp"
@@ -88,7 +88,6 @@
         android:layout_marginEnd="10dp"
         android:background="@drawable/searchview_shape"
         android:hint="Select Deadline"
-        android:inputType="date"
         android:padding="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
