member lists are added in show members button

--- a/app/src/main/res/layout/item_allmembers.xml
+++ b/app/src/main/res/layout/item_allmembers.xml
@@ -5,28 +5,21 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <!-- CheckBox for selection -->
+
     <TextView
         android:id="@+id/memberName"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
+        android:gravity="left|center_vertical"
         android:padding="8dp"
         android:paddingStart="15dp"
         android:text="Member Name"
         android:textSize="16sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/checkBox"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <CheckBox
-        android:id="@+id/checkBox"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        tools:layout_editor_absoluteX="347dp"
-        tools:layout_editor_absoluteY="0dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
