--- a/app/src/main/res/layout/activity_add_work_space.xml
+++ b/app/src/main/res/layout/activity_add_work_space.xml
@@ -4,10 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="@color/white"
+    android:layout_height="match_parent"
+    android:background="#1A2196F3"
     tools:context=".AddWorkSpace">
-    <!-- Workspace Name Input -->
+
+    <!-- Toolbar -->
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
@@ -20,12 +21,26 @@
         app:titleTextAppearance="@style/TextAppearance.Material3.BodyLarge"
         app:titleTextColor="@color/white" />
 
+    <!-- Workspace Name Label -->
+    <TextView
+        android:id="@+id/workspaceNameLabel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        android:text="Workspace Name"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/toolbar" />
+
+    <!-- Workspace Name Input -->
     <EditText
         android:id="@+id/workspaceNameInput"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="5dp"
         android:layout_marginEnd="10dp"
         android:background="@drawable/searchview_shape"
         android:hint="Enter Workspace Name"
@@ -34,7 +49,20 @@
         android:padding="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar" />
+        app:layout_constraintTop_toBottomOf="@id/workspaceNameLabel" />
+
+    <!-- Workspace Description Label -->
+    <TextView
+        android:id="@+id/workspaceDescriptionLabel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="15dp"
+        android:text="Workspace Description"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/workspaceNameInput" />
 
     <!-- Workspace Description Input -->
     <EditText
@@ -42,21 +70,22 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="5dp"
         android:layout_marginEnd="10dp"
         android:background="@drawable/searchview_shape"
+        android:gravity="start"
         android:hint="Write Workspace Description"
         android:inputType="textMultiLine"
-        android:minHeight="48dp"
+        android:minHeight="100dp"
         android:padding="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/workspaceNameInput" />
+        app:layout_constraintTop_toBottomOf="@id/workspaceDescriptionLabel" />
 
     <!-- Choose Members Button -->
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/chooseMembersButton"
-        android:layout_width="wrap_content"
+        android:layout_width="175dp"
         android:layout_height="48dp"
         android:layout_marginTop="15dp"
         android:background="@drawable/button_design"
@@ -68,7 +97,7 @@
         app:layout_constraintTop_toBottomOf="@id/workspaceDescriptionInput"
         tools:ignore="TouchTargetSize" />
 
-    <!-- Deadline Date Input -->
+    <!-- Deadline Label -->
     <TextView
         android:id="@+id/deadlineLabel"
         android:layout_width="wrap_content"
@@ -76,24 +105,29 @@
         android:layout_marginStart="10dp"
         android:layout_marginTop="15dp"
         android:text="Deadline"
+        android:textSize="18sp"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/chooseMembersButton" />
 
+    <!-- Deadline Date Input -->
     <EditText
         android:id="@+id/deadlineDateInput"
-        android:layout_width="0dp"
-        android:layout_height="48dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="5dp"
         android:layout_marginEnd="10dp"
         android:background="@drawable/searchview_shape"
         android:hint="Select Deadline"
+        android:inputType="text"
+        android:minHeight="48dp"
         android:padding="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/deadlineLabel" />
 
-    <!-- Priority Selection -->
+    <!-- Priority Label -->
     <TextView
         android:id="@+id/priorityLabel"
         android:layout_width="wrap_content"
@@ -101,17 +135,22 @@
         android:layout_marginStart="10dp"
         android:layout_marginTop="15dp"
         android:text="Priority"
+        android:textSize="18sp"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/deadlineDateInput" />
 
+    <!-- Priority Spinner -->
     <Spinner
         android:id="@+id/prioritySpinner"
-        android:layout_width="0dp"
-        android:layout_height="48dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="5dp"
         android:layout_marginEnd="10dp"
         android:background="@drawable/searchview_shape"
+        android:minHeight="48dp"
+        android:padding="8dp"
         android:entries="@array/priority_levels"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -120,7 +159,7 @@
     <!-- Submit Button -->
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/submitWorkspaceButton"
-        android:layout_width="wrap_content"
+        android:layout_width="175dp"
         android:layout_height="48dp"
         android:layout_marginTop="15dp"
         android:background="@drawable/button_design"
@@ -128,10 +167,7 @@
         android:text="Create Workspace"
         android:textColor="@android:color/white"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.509"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/prioritySpinner"
-        tools:ignore="TouchTargetSize" />
-
+        app:layout_constraintTop_toBottomOf="@id/prioritySpinner" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
