--- a/app/src/main/res/layout/activity_all_members.xml
+++ b/app/src/main/res/layout/activity_all_members.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
+    android:background="#1A2196F3"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".AllMembersActivity">
@@ -20,8 +21,8 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/myRecyclerView"
-        android:layout_width="409dp"
-        android:layout_height="665dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="10dp"
