--- a/app/src/main/res/layout/item_allmembers.xml
+++ b/app/src/main/res/layout/item_allmembers.xml
@@ -2,9 +2,10 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="@color/white"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_marginTop="4dp"
+    android:background="@drawable/member_itemshape">
 
 
     <TextView
@@ -17,7 +18,6 @@
         android:padding="8dp"
         android:paddingStart="15dp"
         android:text="Member Name"
-        android:background="@drawable/searchview_shape"
         android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
