--- a/app/src/main/res/layout/itemtask.xml
+++ b/app/src/main/res/layout/itemtask.xml
@@ -2,11 +2,17 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="@drawable/edittextshape"
+    android:layout_marginTop="4dp">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="2dp"
+        android:layout_marginTop="2dp"
+        android:layout_marginEnd="2dp"
+        android:layout_marginBottom="2dp"
         android:background="@null"
         app:cardCornerRadius="5dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -52,8 +58,9 @@
                 android:layout_width="100dp"
                 android:layout_height="35dp"
                 android:layout_gravity="left|center_vertical|end"
-                android:layout_marginStart="95dp"
+                android:layout_marginStart="80dp"
                 android:layout_marginTop="8dp"
+                android:layout_marginEnd="40dp"
                 android:layout_marginBottom="8dp"
                 android:background="@drawable/button_design"
                 android:padding="8dp"
