--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -54,8 +54,13 @@
                     android:id="@+id/Role"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="60dp"
+                    android:layout_gravity="start"
+                    android:layout_marginStart="30dp"
+                    android:layout_marginEnd="150dp"
+                    android:minWidth="100dp"
+                    android:minHeight="25dp"
                     android:text="Role"
+                    android:textAlignment="center"
                     android:textColor="@color/white"
                     android:textSize="18sp" />
 
