--- a/app/src/main/res/layout/item_allmembers.xml
+++ b/app/src/main/res/layout/item_allmembers.xml
@@ -7,23 +7,35 @@
     android:layout_marginTop="4dp"
     android:background="@drawable/member_itemshape">
 
+    <!-- CheckBox for selection -->
 
     <TextView
         android:id="@+id/memberName"
         android:layout_width="wrap_content"
-        android:layout_height="50dp"
-        android:layout_marginTop="2dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
         android:layout_marginBottom="2dp"
-        android:gravity="left|center_vertical"
         android:padding="8dp"
         android:paddingStart="15dp"
         android:text="Member Name"
-        android:textSize="16sp"
+        android:textSize="18sp"
         android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/memberImage"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.007" />
+
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/memberImage"
+        android:layout_width="92dp"
+        android:layout_height="77dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
-
+        tools:srcCompat="@tools:sample/avatars" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
